--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta property="twitter:image" content="https://peterlight123.github.io/portfolio/images/profile/peter-picture.png">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="preload" href="css/hero.css" as="style">
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="preload" href="/css/hero.css" as="style">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" as="style">
      
@@ -84,7 +84,7 @@
                 <!-- Logo and Brand -->
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
                     <div class="brand-logo me-3">
-                        <img src="/images/logos/peter-logo.png" alt="Peter Logo" class="rounded-circle" width="45" height="45">
+                        <img src="images/logos/peter-logo.png" alt="Peter Logo" class="rounded-circle" width="45" height="45">
                     </div>
                     <div class="brand-text">
                         <span class="fs-4 fw-bold d-none d-sm-inline">Peter Lightspeed</span>
@@ -1136,4 +1136,5 @@
     <script src="/js/bot.js"></script>
 </body>
 </html>
+
 
