--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta property="twitter:image" content="https://peterlight123.github.io/portfolio/images/profile/peter-picture.png">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="preload" href="/css/hero.css" as="style">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="css/hero.css" as="style">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" as="style">
      
@@ -180,7 +180,7 @@
                     </div>
                     <div class="col-lg-5 col-md-6 position-relative hero-image-container" data-aos="fade-left">
                         <div class="hero-image">
-                            <img src="/images/profile/IMG-20250507-WA0143.jpg" alt="Peter Toluwanimi" class="img-fluid">
+                            <img src="images/profile/IMG-20250507-WA0143.jpg" alt="Peter Toluwanimi" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -548,7 +548,7 @@
                             <img alt="Eluwade Peter Toluwanimi - Professional Virtual Assistant" 
                                  class="img-fluid rounded-circle shadow-lg" 
                                  loading="lazy" 
-                                 src="/images/profile/image.png" 
+                                 src="images/profile/image.png" 
                                  style="max-width: 280px; border: 4px solid #fff;">
                             <div class="status-badge">
                                 <span class="badge bg-success">Available for Projects</span>
@@ -1136,6 +1136,7 @@
     <script src="/js/bot.js"></script>
 </body>
 </html>
+
 
 
 
