--- a/certifications.html
+++ b/certifications.html
@@ -35,6 +35,9 @@
      
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Dark Mode CSS -->
+    <link rel="stylesheet" href="css/dark-mode.css">
     
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -1182,6 +1185,10 @@
     </script>
 <script src="/js/bot.js"></script>
 
+    <!-- Dark Mode JavaScript -->
+<script src="js/dark-mode.js"></script>
+
 </body>
 </html>
+
 
