--- a/certifications.html
+++ b/certifications.html
@@ -37,8 +37,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Dark Mode CSS -->
-    <link rel="stylesheet" href="css/dark-mode.css">
-    
+<!--     <link rel="stylesheet" href="css/dark-mode.css">
+     -->
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     
@@ -1190,5 +1190,6 @@
 
 </body>
 </html>
+
 
 
