--- a/certifications.html
+++ b/certifications.html
@@ -731,7 +731,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img src="images/certifications/cert-1.jpg" alt="Google Web Developer Certificate" class="img-fluid certificate-img">
+                    <img src="https://acrobat.adobe.com/id/urn:aaid:sc:EU:fe4db523-f86e-4486-964a-17c73cbbf9e3" alt="Google Web Developer Certificate" class="img-fluid certificate-img">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -1191,6 +1191,7 @@
 
 </body>
 </html>
+
 
 
 
