--- a/certifications.html
+++ b/certifications.html
@@ -199,7 +199,8 @@
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="images/certifications/meta-logo.png" alt="PLSWorldNews Logo">
+                                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEiOCzf7L6ajkBYHsVS8Fdt2PBJng7R
+                                    tEGip6ot2yHmRUfk0EQaCtqEDDJPKT-B84O2QARFTOEhLlsKMHUDmF6sVFLPDb0y4WNblUjA3zBf3F6mm_7cTHDg0E6eE8dKot6QJ0MhP979qAFEdMZRcL3AKBra0j4I7PQveT4j8tdvKI1jyOdkPjgOi2znS794B=s150" alt="PLSWorldNews Logo">
                             </div>
                             <div class="certification-content">
                                 <h3>PLSWorldNews Blog</h3>
@@ -224,7 +225,7 @@
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="images/certifications/hubspot-logo.png" alt="FreeCodeCamp">
+                                <img src="https://design-style-guide.freecodecamp.org/img/fcc_primary_small.svg" alt="FreeCodeCamp">
                             </div>
                             <div class="certification-content">
                                 <h3>FreeCodeCamp Certificate</h3>
@@ -239,7 +240,7 @@
                                     <span class="badge bg-light text-dark">CSS</span>
                                     <span class="badge bg-light text-dark">Responsive Web Design</span>
                                 </div>
-                                <a href="https://www.freecodecamp.org/certification/Peterlightspeed/responsive-web-design" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal3">
+                                <a href="https://www.freecodecamp.org/certification/peterlightspeed/responsive-web-design" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal3">
                                     <i class="bi bi-eye me-2"></i>View Certificate
                                 </a>
                             </div>
@@ -250,7 +251,7 @@
                     <div class="col-md-6 col-lg-4" data-aos="fade-up">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="images/certifications/adobe-logo.png" alt="Camex Logo">
+                                <img src="https://i.imgur.com/1dEPgUh.jpeg" alt="Camex Logo">
                             </div>
                             <div class="certification-content">
                                 <h3>Digital Services Certificate</h3>
@@ -1191,6 +1192,7 @@
 
 </body>
 </html>
+
 
 
 
