--- a/certifications.html
+++ b/certifications.html
@@ -267,7 +267,7 @@
                                     <span class="badge bg-light text-dark">Front end development</span>
                                     <span class="badge bg-light text-dark">Graphic Design</span>
                                 </div>
-                                <a href="#" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal4">
+                                <a href="https://i.imgur.com/3MUPR3u.png" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal4">
                                     <i class="bi bi-eye me-2"></i>View Certificate
                                 </a>
                             </div>
@@ -278,18 +278,19 @@
                     <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="certification-card">
                             <div class="certification-logo">
-                                <img src="images/certifications/microsoft-logo.png" alt="Microsoft Logo">
+                                <img src="https://media.licdn.com/dms/image/v2/D4E2DAQGb7ua4OTvWjw/profile-treasury-image-shrink_480_480/B4EZgSwj_KGYAM-/0/1752661377855?e=1758758400&v=beta&t=8_eyieq26upm4XvA-IVy-Oq5Yk3KzdYhEQ37JvzP89o" alt="Google Logo">
                             </div>
                             <div class="certification-content">
-                                <h3>Microsoft Office Specialist</h3>
-                                <p class="certification-issuer">Issued by Microsoft</p>
-                                <p class="certification-date">Issued: May 2021 • No Expiration</p>
+                                <h3>AI-Powered Performance Ads Certification</h3>
+                                <p class="certification-issuer">Issued by Google</p>
+                                <p class="certification-date">Issued: july 2025 • july 2026</p>
                                 <div class="certification-skills">
                                     <span class="badge bg-light text-dark">Excel</span>
                                     <span class="badge bg-light text-dark">Word</span>
                                     <span class="badge bg-light text-dark">PowerPoint</span>
                                 </div>
-                                <a href="https://i.imgur.com/3MUPR3u.png    " class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal5">
+                                <a href="https://media.licdn.com/dms/image/v2/D4E2DAQFNQ7WEt7TNyQ/profile-
+                                    treasury-image-shrink_800_800/B4EZgSyp5IHEAk-/0/1752661926205?e=1758758400&v=beta&t=v5SE1ekdfcYWW_xVsQM1OMaruaE188fLXYfrR_4NqKU" class="btn btn-sm btn-outline-primary mt-3" data-bs-toggle="modal" data-bs-target="#certModal5">
                                     <i class="bi bi-eye me-2"></i>View Certificate
                                 </a>
                             </div>
@@ -1192,6 +1193,7 @@
 
 </body>
 </html>
+
 
 
 
