--- a/projects.html
+++ b/projects.html
@@ -217,7 +217,7 @@
                     <!-- NEW Project 1: Lightspeed Tube -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="web social" data-aos="fade-up" data-aos-delay="100">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="/images/projects/lightspeed-tube.png" alt="Lightspeed Tube">
+                            <img src="images/projects/lightspeed-tube.png" alt="Lightspeed Tube">
                             <div class="project-badge bg-danger text-white">YouTube Clone</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Lightspeed Tube</h2>
@@ -260,7 +260,7 @@
                     <!-- NEW Project 3: Lightspeed Hospital Template -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="web" data-aos="fade-up" data-aos-delay="300">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1586773860417-e4526c492c1c?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Lightspeed Hospital Template">
+                            <img src="images/projects/lightspeed-hospital.png" class="card-img-top" alt="Lightspeed Hospital Template">
                             <div class="project-badge bg-primary text-white">Web Template</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Lightspeed Hospital Template</h2>
@@ -994,3 +994,4 @@
 </body>
 </html>
         
+
