--- a/projects.html
+++ b/projects.html
@@ -273,7 +273,7 @@
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
                                     <a href="#" class="btn btn-primary btn-sm disabled" target="_blank">Live Demo</a>
-                                    <small class="text-muted">Completed</small>
+                                    <small class="text-muted">In progress</small>
                                 </div>
                             </div>
                         </div>
@@ -994,4 +994,5 @@
 </body>
 </html>
         
+
 
