--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-lg-6 text-center" data-aos="fade-left">
                         <div class="profile-image-container">
-                            <img src="/images/profile/my pic.png" alt="Peter Eluwade" class="img-fluid rounded-circle profile-image">
+                            <img src="images/profile/my pic.png" alt="Peter Eluwade" class="img-fluid rounded-circle profile-image">
                             <div class="profile-badge">
                                 <span>2+ Years Experience</span>
                             </div>
@@ -550,7 +550,7 @@
                                 <div class="carousel-item active">
                                     <div class="testimonial-item text-center">
                                         <div class="testimonial-avatar">
-                                            <img src="/images/testimonials/andrew.jpg" alt="Client Avatar" class="rounded-circle">
+                                            <img src="images/testimonials/andrew.jpg" alt="Client Avatar" class="rounded-circle">
                                         </div>
                                         <div class="testimonial-content">
                                             <div class="testimonial-rating mb-3">
@@ -592,7 +592,7 @@
                                 <div class="carousel-item">
                                     <div class="testimonial-item text-center">
                                         <div class="testimonial-avatar">
-                                            <img src="/images/testimonials/tochukwu.png" alt="Client Avatar" class="rounded-circle">
+                                            <img src="images/testimonials/tochukwu.png" alt="Client Avatar" class="rounded-circle">
                                         </div>
                                         <div class="testimonial-content">
                                             <div class="testimonial-rating mb-3">
@@ -1015,5 +1015,6 @@
 
 </body>
 </html>
+
 
 
