--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-lg-6 text-center" data-aos="fade-left">
                         <div class="profile-image-container">
-                            <img src="images/profile/my pic.png" alt="Peter Eluwade" class="img-fluid rounded-circle profile-image">
+                            <img src="images/profile/IMG-20250507-WA0143.jpg" alt="Peter Eluwade" class="img-fluid rounded-circle profile-image">
                             <div class="profile-badge">
                                 <span>2+ Years Experience</span>
                             </div>
@@ -1015,6 +1015,7 @@
 
 </body>
 </html>
+
 
 
 
