--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/images/logos/peter-logo.png">
+    <link rel="icon" type="image/png" href="images/logos/peter-logo.png">
 </head>
 <body>
     <!-- HEADER & NAVBAR -->
@@ -821,3 +821,4 @@
 
 </body>
 </html>
+
