--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                 <ol class="breadcrumb mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page"> <a href="contact.html"> Contact</a></li>
-                    <li class="breadcrumb-item active" aria-current="page"> <a href="project"> Discuss your projects</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"> <a href="#project"> Discuss your projects</a></li>
                 </ol>
             </nav>
         </div>
@@ -823,6 +823,7 @@
 
 </body>
 </html>
+
 
 
 
