--- a/projects.html
+++ b/projects.html
@@ -989,10 +989,11 @@
         }
     </script>
     
-<script src="/js/bot.js"></script>
+<script src="js/bot.js"></script>
 
 </body>
 </html>
         
+
 
 
