--- a/certifications.html
+++ b/certifications.html
@@ -1186,13 +1186,11 @@
             gtag('config', 'G-9NKNYWDH33');
         }
     </script>
-<script src="/js/bot.js"></script>
-
-    <!-- Dark Mode JavaScript -->
-<script src="js/dark-mode.js"></script>
+<script src="js/bot.js"></script>
 
 </body>
 </html>
+
 
 
 
