--- a/projects.html
+++ b/projects.html
@@ -367,7 +367,7 @@
                     <!-- Existing Project 4: Beat Blast Flier -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="content design" data-aos="fade-up" data-aos-delay="100">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Beat Blast Flier">
+                            <img src="https://i.imgur.com/IAko0ri.png" class="card-img-top" alt="Beat Blast Flier">
                             <div class="project-badge bg-info text-white">Graphic Design</div>
                             <div class="card-body">
                                 <h2 class="card-title h5" id="beat-blast">Beat Blast Flier</h2>
@@ -388,7 +388,7 @@
                     <!-- Existing Project 5: Forex Flyer -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="design" data-aos="fade-up" data-aos-delay="200">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Forex Flyer">
+                            <img src="https://i.imgur.com/t0xSPd5.png" class="card-img-top" alt="Forex Flyer">
                             <div class="project-badge bg-info text-white">Graphic Design</div>
                             <div class="card-body">
                                 <h2 class="card-title h5" id="forex-flyer">Forex Mentor Flyer</h2>
@@ -409,7 +409,7 @@
                                         <!-- Existing Project 6: Basketball Flyer -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="design" data-aos="fade-up" data-aos-delay="300">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Basketball Flyer">
+                            <img src="https://i.imgur.com/Smwo35d.png" class="card-img-top" alt="Basketball Flyer">
                             <div class="project-badge bg-info text-white">Graphic Design</div>
                             <div class="card-body">
                                 <h2 class="card-title h5" id="basketball-flyer">Basketball Academy Flyer</h2>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
