--- a/projects.html
+++ b/projects.html
@@ -282,7 +282,7 @@
                     <!-- NEW Project 4: Dynamic Hero Page -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="web design" data-aos="fade-up" data-aos-delay="400">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Dynamic Hero Page">
+                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1558655146-d09347e92766?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Dynamic Hero Page">
                             <div class="project-badge bg-info text-white">UI/UX Design</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Dynamic Hero Page</h2>
@@ -303,7 +303,7 @@
                     <!-- Existing Project 1: PLSWorldNews Blog -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="content web" data-aos="fade-up" data-aos-delay="100">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="PLSWorldNews Blog">
+                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1486312338219-ce68d2c6f44d?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="PLSWorldNews Blog">
                             <div class="project-badge bg-primary text-white">Blog</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">PLSWorldNews Blog</h2>
@@ -324,7 +324,7 @@
                     <!-- Existing Project 2: Rizz Script Video Management -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="content social" data-aos="fade-up" data-aos-delay="200">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Rizz Scripts">
+                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1611162617474-5b21e879e113?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Rizz Scripts">
                             <div class="project-badge bg-danger text-white">Video Content</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Rizz Script Video Management</h2>
@@ -345,7 +345,7 @@
                     <!-- Existing Project 3: Portfolio Website -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="web" data-aos="fade-up" data-aos-delay="300">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Portfolio Website">
+                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1460925895917-afdab827c52f?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Portfolio Website">
                             <div class="project-badge bg-success text-white">Web Development</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Personal Portfolio Website</h2>
@@ -524,7 +524,7 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-md-6 mb-4 mb-md-0">
-                                <img src="https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?w=600&h=400&fit=crop&crop=center" class="img-fluid rounded" alt="Beat Blast Flier">
+                                <img src="https://i.imgur.com/Smwo35d.png" class="img-fluid rounded" alt="Beat Blast Flier">
                             </div>
                             <div class="col-md-6">
                                 <h3 class="h4 mb-3">Project Details</h3>
@@ -604,7 +604,7 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-md-6 mb-4 mb-md-0">
-                                <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=600&h=400&fit=crop&crop=center" class="img-fluid rounded" alt="Basketball Flyer">
+                                <img src="https://i.imgur.com/Smwo35d.png" class="img-fluid rounded" alt="Basketball Flyer">
                             </div>
                             <div class="col-md-6">
                                 <h3 class="h4 mb-3">Project Details</h3>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
