--- a/projects.html
+++ b/projects.html
@@ -564,7 +564,7 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-md-6 mb-4 mb-md-0">
-                                <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?w=600&h=400&fit=crop&crop=center" class="img-fluid rounded" alt="Forex Flyer">
+                                <img src="https://i.imgur.com/t0xSPd5.png" class="img-fluid rounded" alt="Forex Flyer">
                             </div>
                             <div class="col-md-6">
                                 <h3 class="h4 mb-3">Project Details</h3>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
