--- a/projects.html
+++ b/projects.html
@@ -282,7 +282,7 @@
                     <!-- NEW Project 4: Dynamic Hero Page -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="web design" data-aos="fade-up" data-aos-delay="400">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1558655146-d09347e92766?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Dynamic Hero Page">
+                            <img src="https://i.imgur.com/bXmX09r.png" class="card-img-top" alt="Dynamic Hero Page">
                             <div class="project-badge bg-info text-white">UI/UX Design</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Dynamic Hero Page</h2>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
