--- a/projects.html
+++ b/projects.html
@@ -303,7 +303,7 @@
                     <!-- Existing Project 1: PLSWorldNews Blog -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="content web" data-aos="fade-up" data-aos-delay="100">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1486312338219-ce68d2c6f44d?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="PLSWorldNews Blog">
+                            <img src="https://i.imgur.com/ynpID4a.png" class="card-img-top" alt="PLSWorldNews Blog">
                             <div class="project-badge bg-primary text-white">Blog</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">PLSWorldNews Blog</h2>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
