--- a/projects.html
+++ b/projects.html
@@ -324,7 +324,7 @@
                     <!-- Existing Project 2: Rizz Script Video Management -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="content social" data-aos="fade-up" data-aos-delay="200">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1611162617474-5b21e879e113?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Rizz Scripts">
+                            <img src="https://images.unsplash.com/photo-1611162616475-46b635cb6868?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Rizz Scripts">
                             <div class="project-badge bg-danger text-white">Video Content</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Rizz Script Video Management</h2>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
