--- a/projects.html
+++ b/projects.html
@@ -345,7 +345,7 @@
                     <!-- Existing Project 3: Portfolio Website -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="web" data-aos="fade-up" data-aos-delay="300">
                         <div class="card shadow-sm h-100 project-card">
-                            <img src="https://images.https://i.imgur.com/bXmX09r.png.com/photo-1460925895917-afdab827c52f?w=500&h=300&fit=crop&crop=center" class="card-img-top" alt="Portfolio Website">
+                            <img src="https://i.imgur.com/YhCPbz5.png" class="card-img-top" alt="Portfolio Website">
                             <div class="project-badge bg-success text-white">Web Development</div>
                             <div class="card-body">
                                 <h2 class="card-title h5">Personal Portfolio Website</h2>
@@ -994,6 +994,7 @@
 </body>
 </html>
         
+
 
 
 
