--- a/about.html
+++ b/about.html
@@ -1001,7 +1001,7 @@
     </script>
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NKNYWDH33"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYGD6Z4GQD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -1009,14 +1009,16 @@
         
         // Only initialize if consent was given
         if (localStorage.getItem('cookiesAccepted') === 'true') {
-            gtag('config', 'G-9NKNYWDH33');
+            gtag('config', 'G-PYGD6Z4GQD');
         }
     </script>
+
 <!-- Bot js -->
 <script src="js/bot.js"></script>
 
 </body>
 </html>
+
 
 
 
