--- a/contact.html
+++ b/contact.html
@@ -805,9 +805,8 @@
             mirror: false
         });
     </script>
-    
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NKNYWDH33"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYGD6Z4GQD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -815,14 +814,16 @@
         
         // Only initialize if consent was given
         if (localStorage.getItem('cookiesAccepted') === 'true') {
-            gtag('config', 'G-9NKNYWDH33');
+            gtag('config', 'G-PYGD6Z4GQD');
         }
     </script>
+
 
 <script src="js/bot.js"></script>
 
 </body>
 </html>
+
 
 
 
