--- a/testimonials.html
+++ b/testimonials.html
@@ -334,11 +334,11 @@
                     <div class="col-md-6" data-aos="fade-up">
                         <div class="video-testimonial">
                             <div class="ratio ratio-16x9">
-                                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Client Testimonial" allowfullscreen></iframe>
+                                <iframe src="https://youtu.be/vB2UQEPLfSA?si=l9XxPhWkZH9DzaB8" title="Client Testimonial" allowfullscreen></iframe>
                             </div>
                             <div class="video-testimonial-info">
-                                <h3>Jessica Parker</h3>
-                                <p>E-commerce Store Owner</p>
+                                <h3>Isaac OluwaDamilare</h3>
+                                <p>Digital Analyst</p>
                             </div>
                         </div>
                     </div>
@@ -347,11 +347,11 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="video-testimonial">
                             <div class="ratio ratio-16x9">
-                                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Client Testimonial" allowfullscreen></iframe>
+                                <iframe src="https://youtu.be/vB2UQEPLfSA?si=l9XxPhWkZH9DzaB8" title="Client Testimonial" allowfullscreen></iframe>
                             </div>
                             <div class="video-testimonial-info">
-                                <h3>Mark Wilson</h3>
-                                <p>Digital Agency Founder</p>
+                                <h3>Gideon Oluwapelumi</h3>
+                                <p>Host, Drum concert</p>
                             </div>
                         </div>
                     </div>
@@ -868,7 +868,7 @@
     </script>
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NKNYWDH33"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYGD6Z4GQD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -876,13 +876,15 @@
         
         // Only initialize if consent was given
         if (localStorage.getItem('cookiesAccepted') === 'true') {
-            gtag('config', 'G-9NKNYWDH33');
+            gtag('config', 'G-PYGD6Z4GQD');
         }
     </script>
+
 
 <script src="js/bot.js"></script>
 
 </body>
 </html>
+
 
 
