--- a/testimonials.html
+++ b/testimonials.html
@@ -179,7 +179,7 @@
                                 <p>"Peter lightspeed delivered a flier that perfectly matched the energy of Gidi Beat Blast. The design was bold, rhythmic and instantly got attention just like a good drum beat. Highly professional and easy to work with!"</p>
                             </div>
                             <div class="testimonial-author">
-                                <img src="/images/testimonials/gideon-oluwapelumi.jpeg" alt="Gideon" class="testimonial-avatar">
+                                <img src="images/testimonials/gideon-oluwapelumi.jpeg" alt="Gideon" class="testimonial-avatar">
                                 <div>
                                     <h4>Gideon Oluwapelumi</h4>
                                     <p>HOST, Beat Blast Flier</p>
@@ -306,17 +306,17 @@
                                 <i class="bi bi-star-half"></i>
                             </div>
                             <div class="testimonial-content">
-                                <p>"I hired Peter to run a digital marketing campaign for my small business. His strategic approach and creativity resulted in a significant ROI. He was always available to answer questions and provide updates. I'll definitely work with him again!"</p>
+                                <p>"I hired Peter to build my portfolio website for me and he did it without any delay, it was so responsive and professional looking. I will definetly work with him again"</p>
                             </div>
                             <div class="testimonial-author">
-                                <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="Robert Chen" class="testimonial-avatar">
+                                <img src="images/testimonials/isaac.jpg" alt="isaac damilare" class="testimonial-avatar">
                                 <div>
-                                    <h4>Robert Chen</h4>
-                                    <p>Owner, Urban Gadgets</p>
+                                    <h4>Isaac Oluwadamilare</h4>
+                                    <p>Data analyst</p>
                                 </div>
                             </div>
                             <div class="testimonial-service">
-                                <span class="badge bg-danger">Digital Marketing</span>
+                                <span class="badge bg-info">Website Design</span>
                             </div>
                         </div>
                     </div>
@@ -885,6 +885,7 @@
 
 </body>
 </html>
+
 
 
 
