--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 </p>
                                 <small class="d-block text-muted mb-3">Date: July 29, 2024</small>
                                 <a href="https://acrobat.adobe.com/id/urn:aaid:sc:EU:fe4db523-f86e-4486-964a-17c73cbbf9e3" class="btn btn-primary" target="_blank">
-                                    <i class="bi bi-file-earmark-pdf me-1"></i> View Certificate
+                                    <i class="bi bi-file-earmark-pdf me-1 bg-light"></i> View Certificate
                                 </a>
                             </div>
                         </div>
@@ -1137,6 +1137,7 @@
     <script src="js/bot.js"></script>
 </body>
 </html>
+
 
 
 
