--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                     writing content, and integrating Google AdSense for monetization.
                                 </p>
                                 <a href="https://plsworldnews.blogspot.com" class="btn btn-primary mt-3" target="_blank">
-                                    <i class="bi bi-box-arrow-up-right me-1"></i> Visit Blog
+                                    <i class="bi bi-box-arrow-up-right me-1 bg-light"></i> Visit Blog
                                 </a>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                     on YouTube, Facebook, and TikTok using Canva and CapCut.
                                 </p>
                                 <a href="https://www.youtube.com/@peterlightspeedvibes" class="btn btn-primary mt-3" target="_blank">
-                                    <i class="bi bi-youtube me-1"></i> View Channel
+                                    <i class="bi bi-youtube me-1 bg-light"></i> View Channel
                                 </a>
                             </div>
                         </div>
@@ -518,7 +518,7 @@
                     </div>
                     <div class="col-6 col-md-3 mb-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="stat-item p-3 rounded shadow-sm">
-                            <h3 class="display-6 fw-bold text-success mb-1 counter" data-target="100">0</h3>
+                            <h3 class="display-6 fw-bold text-success mb-1 counter" data-target="95">0</h3>
                             <p class="text-muted mb-0">Client Satisfaction</p>
                         </div>
                     </div>
@@ -1137,6 +1137,7 @@
     <script src="js/bot.js"></script>
 </body>
 </html>
+
 
 
 
