--- a/index.html
+++ b/index.html
@@ -191,6 +191,48 @@
                 </svg>
             </div>
         </section>
+        <!-- Professional Summary -->
+<section id="summary" class="py-5 bg-light">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <h2 class="mb-4">Professional Summary</h2>
+                <p class="lead mb-4">
+                    Experienced Virtual Assistant and Web Developer with 2+ years of expertise in 
+                    delivering high-quality digital solutions. Specialized in web development, 
+                    graphic design, and comprehensive virtual assistance services.
+                </p>
+                <div class="row text-center">
+                    <div class="col-md-3 col-6 mb-3">
+                        <div class="stat-card">
+                            <h3 class="text-primary fw-bold">50+</h3>
+                            <p class="mb-0">Projects Completed</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-6 mb-3">
+                        <div class="stat-card">
+                            <h3 class="text-success fw-bold">95%</h3>
+                            <p class="mb-0">Client Satisfaction</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-6 mb-3">
+                        <div class="stat-card">
+                            <h3 class="text-warning fw-bold">24/7</h3>
+                            <p class="mb-0">Support Available</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-6 mb-3">
+                        <div class="stat-card">
+                            <h3 class="text-info fw-bold">3+</h3>
+                            <p class="mb-0">Years Experience</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
         <!-- HIGHLIGHTS SECTION -->
         <section id="highlights" class="py-5 bg-light">
@@ -1188,6 +1230,7 @@
     <script src="js/bot.js"></script>
 </body>
 </html>
+
 
 
 
