--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
     </script>
 </head>
 <body>
+    <!-- Loading Screen -->
+<div id="loadingScreen" class="loading-screen">
+    <div class="loading-container">
+        <!-- Logo Image -->
+        <div class="logo-loader">
+            <img src="images/logo/peter-logo.png" alt="Peter Lightspeed Logo" class="loading-logo">
+            <h3 class="logo-text">Peter Lightspeed</h3>
+        </div>
+        
+        <!-- Loading Progress -->
+        <div class="loading-progress">
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+            </div>
+            <p class="loading-text">Loading Portfolio...</p>
+            <span class="progress-percentage">0%</span>
+        </div>
+    </div>
+</div>
+
     <!-- HEADER & NAVBAR -->
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm py-3">
@@ -1230,6 +1250,7 @@
     <script src="js/bot.js"></script>
 </body>
 </html>
+
 
 
 
