--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="loading-container">
         <!-- Logo Image -->
         <div class="logo-loader">
-            <img src="images/logo/peter-logo.png" alt="Peter Lightspeed Logo" class="loading-logo">
+            <img src="images/logos/peter-logo.png" alt="Peter Lightspeed Logo" class="loading-logo">
             <h3 class="logo-text">Peter Lightspeed</h3>
         </div>
         
@@ -1250,6 +1250,7 @@
     <script src="js/bot.js"></script>
 </body>
 </html>
+
 
 
 
