--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                 <i class="bi bi-tiktok"></i>
                 <span>TikTok</span>
             </a>
-            <a href="https://www.youtube.com/@peterlightspeedvibes" target="_blank" rel="noopener" class="social-link youtube">
+            <a href="https://www.youtube.com/@petereluwade" target="_blank" rel="noopener" class="social-link youtube">
                 <i class="bi bi-youtube"></i>
                 <span>YouTube</span>
             </a>
@@ -1251,6 +1251,7 @@
     <script src="js/interface.js"></script>
 </body>
 </html>
+
 
 
 
