--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
         </div>
         <div class="social-links-sidebar">
             <a href="https://x.com/peter8118533304" target="_blank" rel="noopener" class="social-link twitter">
-                <i class="bi bi-twitter-x"></i>
+                <i class="bi bi-twitter"></i>
                 <span>Twitter</span>
             </a>
             <a href="https://www.instagram.com/eluwadepeter" target="_blank" rel="noopener" class="social-link instagram">
@@ -1251,6 +1251,7 @@
     <script src="js/interface.js"></script>
 </body>
 </html>
+
 
 
 
