--- a/testimonials.html
+++ b/testimonials.html
@@ -277,20 +277,20 @@
                                 <i class="bi bi-star-fill"></i>
                                 <i class="bi bi-star-fill"></i>
                                 <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star"></i>
+                                <i class="bi bi-star-fill"></i>
                             </div>
                             <div class="testimonial-content">
-                                <p>"Peter helped me organize and process a large amount of data for my research project. His attention to detail and efficiency saved me countless hours. The spreadsheets and visualizations he created made it easy to analyze and present my findings."</p>
+                                <p>Learning web development from Peter was a great experience. He explained concepts clearly, guided me through projects, and gave me the confidence to build on my own. I’m truly grateful for his support and mentorship.</p>
                             </div>
                             <div class="testimonial-author">
                                 <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Jennifer Lee" class="testimonial-avatar">
                                 <div>
-                                    <h4>Jennifer Lee</h4>
-                                    <p>Research Analyst</p>
+                                    <h4>munachi</h4>
+                                    <p>Student</p>
                                 </div>
                             </div>
                             <div class="testimonial-service">
-                                <span class="badge bg-secondary">Data Entry</span>
+                                <span class="badge bg-secondary">Website development</span>
                             </div>
                         </div>
                     </div>
@@ -424,6 +424,7 @@
                     <div class="col-lg-6" data-aos="fade-left">
                         <div class="testimonial-form-wrapper" id="testimonialForm">
                             <h3 class="h4 mb-4">Share Your Experience</h3>
+                            <p>Sent images directly to my mail: petereluwade55@gmail.com or any other source of communication you can send it to</p>
                             <form id="leaveTestimonialForm" action="https://formspree.io/f/meoljzde" method="POST">
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Your Name <span class="text-danger">*</span></label>
@@ -885,6 +886,7 @@
 
 </body>
 </html>
+
 
 
 
