--- a/testimonials.html
+++ b/testimonials.html
@@ -283,7 +283,7 @@
                                 <p>Learning web development from Peter was a great experience. He explained concepts clearly, guided me through projects, and gave me the confidence to build on my own. I’m truly grateful for his support and mentorship.</p>
                             </div>
                             <div class="testimonial-author">
-                                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Jennifer Lee" class="testimonial-avatar">
+                                <img src="images/testimonials/munachi.jpg" alt="Jennifer Lee" class="testimonial-avatar">
                                 <div>
                                     <h4>munachi</h4>
                                     <p>Student</p>
@@ -886,6 +886,7 @@
 
 </body>
 </html>
+
 
 
 
