--- a/testimonials.html
+++ b/testimonials.html
@@ -280,7 +280,7 @@
                                 <i class="bi bi-star-fill"></i>
                             </div>
                             <div class="testimonial-content">
-                                <p>Learning web development from Peter was a great experience. He explained concepts clearly, guided me through projects, and gave me the confidence to build on my own. I’m truly grateful for his support and mentorship.</p>
+                                <p>"Learning web development from Peter was a great experience. He explained concepts clearly, guided me through projects, and gave me the confidence to build on my own. I’m truly grateful for his support and mentorship."</p>
                             </div>
                             <div class="testimonial-author">
                                 <img src="images/testimonials/munachi.jpg" alt="Munachi" class="testimonial-avatar">
@@ -886,6 +886,7 @@
 
 </body>
 </html>
+
 
 
 
