--- a/testimonials.html
+++ b/testimonials.html
@@ -207,7 +207,7 @@
                             <div class="testimonial-author">
                                 <img src="images/testimonials/andrew.jpg" alt="Andrew Stephen" class="testimonial-avatar">
                                 <div>
-                                    <h4>Michael Rodriguez</h4>
+                                    <h4>Andrew Stephen</h4>
                                     <p>Forex Mentor</p>
                                 </div>
                             </div>
@@ -886,6 +886,7 @@
 
 </body>
 </html>
+
 
 
 
