--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
 </head>
 <body>
     <!-- Loading Screen -->
-<div id="loadingScreen" class="loading-screen">
+<!--<div id="loadingScreen" class="loading-screen">
     <div class="loading-container">
         <!-- Logo Image -->
-        <div class="logo-loader">
+        <!--<div class="logo-loader">
             <img src="images/logos/peter-logo.png" alt="Peter Lightspeed Logo" class="loading-logo">
             <h3 class="logo-text">Peter Lightspeed</h3>
         </div>
         
         <!-- Loading Progress -->
-        <div class="loading-progress">
+        <!--<div class="loading-progress">
             <div class="progress-bar">
                 <div class="progress-fill"></div>
             </div>
@@ -95,7 +95,7 @@
             <span class="progress-percentage">0%</span>
         </div>
     </div>
-</div>
+ </div> -->
 
     <!-- HEADER & NAVBAR -->
     <header class="sticky-top">
@@ -1251,6 +1251,7 @@
     <script src="js/interface.js"></script>
 </body>
 </html>
+
 
 
 
