--- a/index.html
+++ b/index.html
@@ -1248,9 +1248,10 @@
 </div>
 
     <script src="js/bot.js"></script>
-    <script src="js/interface.js"></script>
+    <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
