--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                         </div>
                         <div class="social-icons mt-4 d-flex gap-3">
                             <a href="https://www.linkedin.com/in/peter-eluwade-5b8a73363/" class="text-light fs-4" target="_blank" aria-label="LinkedIn Profile"><i class="bi bi-linkedin"></i></a>
-                            <a href="https://x.com/peter8118533304" class="text-light fs-4" target="_blank" aria-label="Twitter Profile"><i class="bi bi-twitter-x"></i></a>
+                            <a href="https://x.com/peter8118533304" class="text-light fs-4" target="_blank" aria-label="Twitter Profile"><i class="bi bi-twitter"></i></a>
                             <a href="https://www.instagram.com/eluwadepeter" class="text-light fs-4" target="_blank" aria-label="Instagram Profile"><i class="bi bi-instagram"></i></a>
-                            <a href="https://www.youtube.com/@peterlightspeed" class="text-light fs-4" target="_blank" aria-label="YouTube Channel"><i class="bi bi-youtube"></i></a>
+                            <a href="https://www.youtube.com/@petereluwade" class="text-light fs-4" target="_blank" aria-label="YouTube Channel"><i class="bi bi-youtube"></i></a>
                             <a href="https://www.tiktok.com/@eluwadepeter" class="text-light fs-4" target="_blank" aria-label="TikTok Profile"><i class="bi bi-tiktok"></i></a>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="col-md-3 col-6 mb-3">
                         <div class="stat-card">
-                            <h3 class="text-info fw-bold">3+</h3>
+                            <h3 class="text-info fw-bold">2+</h3>
                             <p class="mb-0">Years Experience</p>
                         </div>
                     </div>
@@ -1251,6 +1251,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
