--- a/projects.html
+++ b/projects.html
@@ -299,6 +299,28 @@
                             </div>
                         </div>
                     </div>
+                    <!-- NEW Project 5: Formspree Contact Form -->
+                    <div class="col-md-6 col-lg-4 project-item" data-category="web" data-aos="fade-up" data-aos-delay="200">
+                        <div class="card shadow-sm h-100 project-card">
+                            <img src="https://i.imgur.com/YpEEkNu.png" class="card-img-top" alt="Formspree Contact Form Project">
+                            <div class="project-badge bg-primary text-white">Contact Form</div>
+                            <div class="card-body">
+                                <h2 class="card-title h5">Formspree Contact Form</h2>
+                                <p class="card-description">A professional contact form built with HTML, CSS, and Bootstrap, integrated with Formspree for real-time email submissions and smooth success feedback.</p>
+                                <div class="tech-stack">
+                                    <span class="tech-badge">HTML</span>
+                                    <span class="tech-badge">CSS</span>
+                                    <span class="tech-badge">JavaScript</span>
+                                    <span class="tech-badge">Bootstrap</span>
+                                    <span class="tech-badge">Formspree</span>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mt-3">
+                                    <a href="https://peterlight123.github.io/formspree/" class="btn btn-primary btn-sm" target="_blank">Visit Site</a>
+                                    <small class="text-muted">Completed</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- Existing Project 1: PLSWorldNews Blog -->
                     <div class="col-md-6 col-lg-4 project-item" data-category="content web" data-aos="fade-up" data-aos-delay="100">
@@ -1014,6 +1036,7 @@
 </body>
 </html>
         
+
 
 
 
