--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         </div>
     </div>
  </div> -->
+    <div class="alert alert-warning alert-dismissible fade show text-center mb-0" role="alert" id="siteNotice">
+  <strong>Hey there! 👋</strong> We’re currently improving this website, so a few things might not look perfect yet. Thanks for your patience!
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
 
     <!-- HEADER & NAVBAR -->
     <header class="sticky-top">
@@ -1251,6 +1256,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
