--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
       "knowsAbout": ["Web Development", "Graphic Design", "Virtual Assistant"]
     }
     </script>
+    <style>#siteNotice {
+  position: relative;
+  z-index: 2000;
+  font-weight: 500;
+  background: linear-gradient(90deg, #fff3cd, #ffeeba);
+  color: #856404;
+  border: 1px solid #ffeeba;
+  border-radius: 0;
+  padding: 0.8rem 1rem;
+  font-size: 0.95rem;
+}
+</style>
 </head>
 <body>
     <!-- Loading Screen -->
@@ -1256,6 +1268,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
