--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
     <!-- Loading Screen -->
-<!--<div id="loadingScreen" class="loading-screen">
+<div id="loadingScreen" class="loading-screen">
     <div class="loading-container">
         <!-- Logo Image -->
         <!--<div class="logo-loader">
@@ -107,7 +107,7 @@
             <span class="progress-percentage">0%</span>
         </div>
     </div>
- </div> -->
+ </div> 
     <div class="alert alert-warning alert-dismissible fade show text-center mb-0" role="alert" id="siteNotice">
   <strong>Hey there! 👋</strong> We’re currently improving this website, so a few things might not look perfect yet. Thanks for your patience!
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -1268,6 +1268,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
