--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 </head>
 <body>
     <!-- Loading Screen -->
-<div id="loadingScreen" class="loading-screen">
+<!-- <div id="loadingScreen" class="loading-screen">
     <div class="loading-container">
-        <!-- Logo Image -->
+        <!-- Logo Image --> -->
         <!--<div class="logo-loader">
             <img src="images/logos/peter-logo.png" alt="Peter Lightspeed Logo" class="loading-logo">
             <h3 class="logo-text">Peter Lightspeed</h3>
@@ -1268,6 +1268,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
