--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Loading Screen -->
 <!-- <div id="loadingScreen" class="loading-screen">
     <div class="loading-container">
-        <!-- Logo Image --> -->
+        <!-- Logo Image --> 
         <!--<div class="logo-loader">
             <img src="images/logos/peter-logo.png" alt="Peter Lightspeed Logo" class="loading-logo">
             <h3 class="logo-text">Peter Lightspeed</h3>
@@ -111,7 +111,7 @@
     <div class="alert alert-warning alert-dismissible fade show text-center mb-0" role="alert" id="siteNotice">
   <strong>Hey there! 👋</strong> We’re currently improving this website, so a few things might not look perfect yet. Thanks for your patience!
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+</div> 
 
 
     <!-- HEADER & NAVBAR -->
@@ -1268,6 +1268,7 @@
     <!-- <script src="js/interface.js"></script> -->
 </body>
 </html>
+
 
 
 
